feat: add advanced profiling and correlation analysis
Phase 3: GC Deep Dive
- Add allocation rate tracking (jdk.ObjectAllocationInNewTLAB)
- Add metaspace monitoring (jdk.MetaspaceSummary)
- Add GC overhead calculation with warnings

Phase 4: CPU/Thread Deep Dive
- Add method profiling via execution sampling (jdk.ExecutionSample)
- Add lock contention analysis (jdk.JavaMonitorEnter/Wait)

Phase 5: Correlation Analysis
- Add GC ↔ CPU spike correlation detection
- Add GC ↔ Pinning correlation detection
- Add automatic recommendations (memory leak, contention hotspots, etc.)

New API endpoints:
- /allocation-analysis
- /metaspace-metrics
- /method-profiling
- /contention-analysis
- /correlation

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>